# pearnament

./: .gitignore  CITATION.cff  LICENSE  README.md  package.json  pyproject.toml  webpack.config.js
.github/workflows/: ci.yml  publish.yml
data/examples/: wmt25_#_cs-de_DE.json  wmt25_#_cs-uk_UA.json  wmt25_#_en-ar_EG.json  wmt25_#_en-bho_IN.json  wmt25_#_en-cs_CZ.json  wmt25_#_en-et_EE.json  wmt25_#_en-is_IS.json  wmt25_#_en-it_IT.json  wmt25_#_en-ja_JP.json  wmt25_#_en-mas_KE.json  wmt25_#_en-ru_RU.json  wmt25_#_en-sr_Cyrl_RS.json  wmt25_#_en-uk_UA.json  wmt25_#_en-zh_CN.json
examples/: attention_checks.json  da.json  da_enuk.json  esa.json  esa_encs.json  esaai.json  esaai_listwise_prefilled.json  esaai_prefilled.json  kway.json  listwise.json  mock_listwise.json  mock_multimodal.json  mock_tutorial.json  mock_tutorial_listwise.json  mqm.json  mqm_csde.json  multimodal.json  singlestream.json  tutorial_kway.json  tutorial_listwise.json  tutorial_listwise_score_gt.json  tutorial_pointwise.json  wmt25_#_cs-de_DE.json  wmt25_#_en-cs_CZ.json
examples/tutorials/: README.md  esa_deen.json
experimental/: 01-ingest_wmt25.py  competition_model_bayes.py
scripts/: 00-build.sh  00-vm.sh  01-ingest_wmt25.py  02-abc_pearmut.py  02-report.py  02-simulate.py  03_speed_test.py  competition_waiters.py  models.py  waiters.py
server/: app.py  assignment.py  cli.py  main.py  model.py  protocols.py  pyproject.toml  results_export.py  run.py  utils.py
server/examples/: wmt25_#_en-cs_CZ.json
server/pearnament/: cli.py  protocols.py  run.py  utils.py
server/tests/: smoke.py  test_assignment.py  test_cli.py  test_protocols.py  test_serve.py  test_utils.py  test_validation.py
src/: connector.ts  index.html  index.ts  pyproject.toml
src/server/: cli.py  model.py  protocols.py  run.py  utils.py
src/web/: package.json  webpack.config.js
src/web/src/: connector.ts  dashboard.html  dashboard.ts  index.html  pointwise.html  pointwise.ts
src/web/src/assets/: style.css
web/: package.json  tsconfig.json  webpack.config.js
web/src/: ESA.html  ESA.ts  basic.html  basic.ts  connector.ts  dashboard.html  dashboard.ts  index.html  index.ts  listwise.html  listwise.ts  main.ts  pairwise.html  pairwise.ts  pointwise.html  pointwise.ts  style.css  utils.ts
web/src/assets/: style.css
