[project]
name = "pearmut"
version = "0.0.5"
description = "A tool for evaluation of model outputs, primarily MT."
readme = "README.md"
license = { text = "apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Vilém Zouhar", email = "vilem.zouhar@gmail.com" }]
keywords = [
    "evaluation",
    "machine translation",
    "human evaluation",
    "annotation",
]
dependencies = [
    "fastapi >= 0.110.0",
    "uvicorn >= 0.29.0",
    "wonderwords >= 3.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pynpm >= 0.3.0"]

[project.scripts]
pearmut = "pearmut.cli:main"

[project.urls]
Repository = "https://github.com/zouharvi/pearmut"
Issues = "https://github.com/zouharvi/pearmut/issues"

[tool.setuptools]
package-dir = { "pearmut" = "server" }
packages = ["pearmut"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"pearmut" = ["static/**"]

# rm -rf server/static/; npm install web/ --prefix web/; npm run build --prefix web/
# rm -rf {build,dist,pearmut.egg-info}/*; python3 -m build 
# python3 -m twine upload dist/* -u __token__

# pip install -e . --config-settings editable_mode=strict