[project]
name = "pearnament"
description = "A tool for evaluation of model outputs, primarily MT."
authors = [
    { name="Vilém Zouhar", email="vilem.zouhar@gmail.com" }
]
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi >= 0.110.0",
    "uvicorn >= 0.29.0",
    "wonderwords >= 3.0.0",
    "pynpm >= 0.3.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
pearnament = "pearnament.cli:main"

[tool.setuptools]
package-dir = {"pearnament" = "server"}
packages = ["pearnament"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"